<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView7"
        style="@style/Base.Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:paddingTop="5dp"
        android:paddingLeft="85dp"
        android:text="Login Page"
        android:textColor="#ffffff"
        android:textSize="25dp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="228sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Userrname"
            android:textColor="#04ea00" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="228dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="228sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="#04ea00" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="228dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:password="true" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="140dp"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#04ea00"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/not_registered"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:text="@string/register"
                android:textColor="#04ea00"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
